added separate grid for alpha.  No operations currently added that use this grid.  Progress toward #15

--- a/PlottingTest.ipynb
+++ b/PlottingTest.ipynb
@@ -1,13 +1,20 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:702988b5353b6cf83843054b20521ca7db105e6ed1ac50a9cfcd022328bbb5d0"
+  "signature": "sha256:a724eda51b18afc1cc66477b68caaab512465dfb7b22c67f758a6d635dec1bf1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Plotting Tests:  This notebook is a sandbox in which we will showcase the plotting capabilites of our raytracing code as they evolve."
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -19,6 +26,13 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Create a test lens object which imports its kappa map from a fits file.  Then make a plot of the kappa map."
+     ]
     },
     {
      "cell_type": "code",
@@ -41,6 +55,13 @@
       }
      ],
      "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here, we deflect numerically using the kappa map, and plot the result.  The two plots show the magnitudes of the x and y components of the deflection angle in arcseconds."
+     ]
     },
     {
      "cell_type": "code",
