added more lines.

--- a/First_Villain.ipynb
+++ b/First_Villain.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dcafe9da5ad510c3be09b84d0b0a689c0500ed158ba55239bcd78b1d5a3a3a40"
+  "signature": "sha256:caf32f60f1281ac46f1adcdda0e56188f205b450e571a09282200afb533332bb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -112,10 +112,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "lens.write_image_to('./lair/DrEggman.fits')"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "evillens/gravitationalLens.py:387: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n",
+        "  if self.image == None:\n"
+       ]
+      }
+     ],
+     "prompt_number": 54
     }
    ],
    "metadata": {}
