--- a/AntennaEffects.ipynb
+++ b/AntennaEffects.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:77f4315601e1babe7b5789a4c46890356236b7b0da1dc72dceb179573474c26a"
+  "signature": "sha256:32ef56207c37b5720f0622333f008fd3a3b47762cf8bb7dfac3df88205924e9d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -121,9 +121,9 @@
       "\\end{equation}\n",
       "(equation 4 from Carilli & Holdaway (1999) ), if we assume gaussian random phase fluctuations.  The rms phase fluctuation ($\\phi_{rms}$) is determined from the root phase structure function\n",
       "\\begin{equation} \\phi_{rms} = \\frac{K}{\\lambda_{mm}}b_{km}^{\\alpha}~deg\n",
-      "\\end{equation}, as predicted by Kolmogorov turbulence theory (Carilli & Holdaway (1999)).  The exponent $\\alpha$ is related to the baseline length.  Kolmogorov Turbulence theory (Coulman 1990) predicts $\\alpha=\\frac{1}{3}$ for short baselines (shorter than the width of the turbulent layer of the atmosphere), and $\\alpha=5/6$ for baselines longer than the width of the turbulent layer, but shorter than the 'outer scale' length $L_0$, above which the phase variations should be constant (Carilli & Holdaway 1999)\n",
+      "\\end{equation}, as predicted by Kolmogorov turbulence theory (Carilli & Holdaway (1999)).  The exponent $\\alpha$ is related to the baseline length.  Kolmogorov Turbulence theory (Coulman 1990) predicts $\\alpha=\\frac{1}{3}$ for short baselines (shorter than the width of the turbulent layer of the atmosphere), and $\\alpha=5/6$ for baselines longer than the width of the turbulent layer, but shorter than the 'outer scale' length $L_0$, above which the phase variations should be constant (Carilli & Holdaway 1999).\n",
       "\n",
-      "Thus, when the add decoherence function is called, it calculates $\\phi_{rms}$ for each uv distance, and multiplies the corresponding visibility by the supression factor.  The results are plotted below.  Evidently the effect of decoherence is to reduce the amplitude of the signal from long baselines."
+      "Thus, when the add_decoherence function is called, it calculates $\\phi_{rms}$ for each uv distance, and multiplies the corresponding visibility by the supression factor.  The results are plotted below.  Evidently the effect of decoherence is to reduce the amplitude of the signal from long baselines."
      ]
     },
     {
@@ -206,9 +206,10 @@
      "source": [
       "Adding amplitude errors and decoherence seems to be fairly straightforward.  Phase errors are more complicated, since it depends on the absolute position of both antennas.  From before, we have that the root phase structure function is \n",
       "$\\phi_{rms}=\\frac{K}{\\lambda}b^{\\alpha}~(deg)$, \n",
-      "where K is a constant, and b is the baseline distance.  This function determines the rms phase error between two antennas.  \n",
+      "where K is a constant, and b is the baseline distance.  This function determines the rms phase difference between two antennas,\n",
+      "as a function of their separation and the other parameters of the observation.  \n",
       "\n",
-      "However, modeling the phases themselves is slightly more complicated, since all antennas should measure the same phase structure function, independent of their location in the array.  Thus we use fourier transforms to produce a phase screen that follows the root phase structure function at all points in the grid.  We also want to make this time dependent, since we know that the atmosphere is dynamic, and changes significantly over the course of a several hour observation.  Thus we have added an additional parameter (v) to the function which specifies the velocity of the antennas relative to the phase screen.  For simplicity, the velocity is constant and always in the x-direction, however it is simple to allow it to move in any direction.\n",
+      "However, modeling the phases themselves, in a large population of antennas is slightly more complicated, since all antennas should measure the same phase structure function, independent of their location in the array.  Moreover, the phase error on an individual antenna should influence all of the observations taken using that antenna by the same amount.  Thus we use fourier transforms to produce a phase screen that follows the root phase structure function at all points in the grid.  We also want to make this time dependent, since we know that the atmosphere is dynamic and changes significantly over the course of a several hour observation.  Thus we have added an additional parameter (v, with units of meters/time step) when calling the add_phase_errors function, which specifies the velocity of the antennas relative to the phase screen.  For simplicity, the velocity is constant and always in the x-direction, however it is simple to allow it to move in any direction.\n",
       "\n",
       "The function then determines new x,y coordinates of the antennas by shifting their position by $v\\times N_{tstep}$, where \n",
       "$N_{tstep}$ is the number of time steps since the start of the observation.  To get this number, we exploit the fact that a measurement set is listed chronologically, that is to say, all of the integrations that were taken at the same time are listed together.  We can thus calculate $N_{tsteps}$ by integer dividing the row number (r) by the number of visibilities per time step ($N_{ant}(N_{ant}-1)$), ($N_{tsteps}=r/(N_{ant}(N_{ant}-1))$) \n",
@@ -223,15 +224,16 @@
       "   in numpy.\n",
       "   \n",
       "3) For each point in the fourier transformed grid, multiply the value of that point by the rms phase of the corresponding\n",
-      "   baseline.  To do this, we use $d=\\frac{1}{\\sqrt{f_{x}^2+f_{y}^2}}$ as the baseline separation.\n",
+      "   baseline.  To do this, we use $d=1/\\sqrt{f_{x}^2+f_{y}^2}$ as the baseline separation.\n",
       "   \n",
       "4) Take the inverse fourier transform of the grid.  The result is a phase screen that follows the phase structure function\n",
-      "   regardless of position.\n",
+      "   regardless of location.\n",
       "   \n",
       "5) Take the list of positions that were calculated earlier, and assign a phase to each antenna at that position using the\n",
       "   corresponding point in the phase screen.\n",
       "  \n",
-      "6) The visibilities will then be multiplied by a factor $\\exp{\\left(i(\\phi_1-\\phi_2)\\right)}$\n",
+      "6) The visibilities will then be multiplied by a factor $\\exp{\\left(i(\\phi_1-\\phi_2)\\right)}$ where the two phases are the\n",
+      "   respective phases for each antenna involved with taking the observation.\n",
       "\n",
       "Below we show the results of calling this function.  We have plotted the magnitudes of the visibilities alongside the original magnitudes.  As might be expected, the magnitude of the visibilities is unchanged by a rotation in the complex plane.  Thus, we also plotted the real components of the visibilities for both before (black) and after (blue).  In this second plot, the effect of the phase errors becomes apparent."
      ]
