Cleaned for presentation

--- a/AntennaEffects.ipynb
+++ b/AntennaEffects.ipynb
@@ -1,13 +1,20 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:32ef56207c37b5720f0622333f008fd3a3b47762cf8bb7dfac3df88205924e9d"
+  "signature": "sha256:1129fdfa5ba4b4d9b1b289a9def7ba88245cd83ba3d71a45dc2d33d936d0c143"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#Antenna Effects Demonstration"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
