New villain added

--- a/DrEvil.ipynb
+++ b/DrEvil.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -253,6 +253,47 @@
    "source": [
     "lens.write_image_to('DrEvil.fits')\n",
     "np.savetxt('DrEvil_source_parameters.txt', datalist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4429830394e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.05/np.sum(lens.image)*np.max(lens.image))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4429830394e-06"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.0000014429830394"
    ]
   },
   {
